--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lualib-src/lua-cjson"]
 	path = lualib-src/lua-cjson
 	url = https://github.com/mpx/lua-cjson.git
+[submodule "lualib-src/lua-protobuf"]
+	path = lualib-src/lua-protobuf
+	url = https://github.com/starwing/lua-protobuf.git
