--- a/lualib-src/Makefile
+++ b/lualib-src/Makefile
@@ -19,31 +19,31 @@ all	: $(LUA_CLIB_PATH)/cjson.so $(LUA_CLIB_PATH)/websocketnetpack.so $(LUA_CLIB_
 		$(LUA_CLIB_PATH)/lfs.so $(LUA_CLIB_PATH)/luaclock.so $(LUA_CLIB_PATH)/hash.so $(LUA_CLIB_PATH)/pb.so \
 		$(LUA_CLIB_PATH)/snapshot.so $(LUA_CLIB_PATH)/lkcp.so
 
-$(LUA_CLIB_PATH)/cjson.so : lua-cjson/fpconv.c lua-cjson/strbuf.c lua-cjson/lua_cjson.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/cjson.so : lua-cjson/fpconv.c lua-cjson/strbuf.c lua-cjson/lua_cjson.c
 	$(CC) $(CFLAGS) $(SHARED) -Ilua-cjson $^ -o $@
 
-$(LUA_CLIB_PATH)/websocketnetpack.so : lua-websocketnetpack.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/websocketnetpack.so : lua-websocketnetpack.c
 	$(CC) $(CFLAGS) $(SHARED) -I$(SKYNET_BUILD_PATH)/skynet-src $^ -o $@
 
-$(LUA_CLIB_PATH)/clientwebsocket.so : lua-clientwebsocket.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/clientwebsocket.so : lua-clientwebsocket.c
 	$(CC) $(CFLAGS) $(SHARED) $^ -o $@ -lpthread
 
-$(LUA_CLIB_PATH)/lfs.so : luafilesystem/src/lfs.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/lfs.so : luafilesystem/src/lfs.c
 	$(CC) $(CFLAGS) $(SHARED) -Iluafilesystem/src $^ -o $@
 
-$(LUA_CLIB_PATH)/luaclock.so : luaclock.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/luaclock.so : luaclock.c
 	$(CC) $(CFLAGS) $(SHARED) $^ -o $@ -lpthread
 
-$(LUA_CLIB_PATH)/hash.so : lua-hash.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/hash.so : lua-hash.c
 	$(CC) $(CFLAGS) $(SHARED) $^ -o $@ 
 
-$(LUA_CLIB_PATH)/pb.so : lua-protobuf/pb.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/pb.so : lua-protobuf/pb.c
 	$(CC) $(CFLAGS) $(SHARED) -Ilua-protobuf $^ -o $@
 
-$(LUA_CLIB_PATH)/snapshot.so : lua-snapshot/snapshot.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/snapshot.so : lua-snapshot/snapshot.c
 	$(CC) $(CFLAGS) $(SHARED) $^ -o $@
 
-$(LUA_CLIB_PATH)/lkcp.so : lua-kcp/lkcp.c lua-kcp/ikcp.c | $(LUA_CLIB_PATH)
+$(LUA_CLIB_PATH)/lkcp.so : lua-kcp/lkcp.c lua-kcp/ikcp.c
 	$(CC) $(CFLAGS) $(SHARED) -Ilua-kcp $^ -o $@
 clean :
 	rm -f $(LUA_CLIB_PATH)/*.so
